# AND_DAQ

./: .gitignore  AND_DAQ.c  CMakeLists.txt  IBDSelection.m  Preprocess.m  ProcessNeutrinoData.m  README.md  _readme.txt  config.txt  反中微子探测阵列DAQ系统功能.txt
CAEN/include/: CAENComm.h  CAENVMElib.h  CAENVMEoslib.h  CAENVMEtypes.h  CAEN_PLULib.h
CAEN/lib/: CAENComm.lib  CAENVMELib.lib  CAEN_PLULib.lib
gnuplot/: NEWS  README.Windows
histo/: _readme.txt
include/: AcquireData.h  ConfigBoards.h  Console.h  DefineMacro.h  OperateRegister.h  PrintAndControl.h  TestFunctoin.h
output/: _readme.txt
src/: AcquireData.c  ConfigBoards.c  Console.c  OperateRegister.c  PrintAndControl.c  TestFunction.c
